Consolidate customer debt balances